k8s/05-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  
  type: ClusterIP
  selector:
    app: sales-automl-app
  ports:
  - port: 8501
    targetPort: 8501
